--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "netlight-live-backend",
+  "name": "netlight-podcasts-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "config.example.js",
+  "main": "index.js",
   "dependencies": {
-    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
@@ -12,8 +11,7 @@
     "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
-    "passport-azure-ad": "^4.3.0",
-    "socket.io": "^3.0.4"
+    "passport-azure-ad": "^4.3.0"
   },
   "devDependencies": {},
   "scripts": {
