--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netlight-live-frontend",
+  "name": "netlight-podcasts-frontend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
