--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "file-type": "^16.3.0",
     "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-azure-ad": "^4.3.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js"
   },
