--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
-    "passport-azure-ad": "^4.3.0"
+    "passport-azure-ad": "^4.3.0",
+    "send-seekable": "^1.0.4"
   },
   "scripts": {
     "start": "node server.js"
