--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,32 +11,32 @@
     "start": "vue-cli-service serve"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.5",
-    "socket.io-client": "^3.0.4",
+    "axios": "^0.27.2",
+    "core-js": "^3.23.5",
+    "socket.io-client": "^4.5.1",
     "vue": "^2.6.11",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.3.4",
-    "vuetify": "^2.4.0",
+    "vuetify": "^2.6.7",
     "vuex": "^3.5.1",
-    "webpack": "^4.44.0"
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-router": "^4.4.6",
-    "@vue/cli-plugin-vuex": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.18.9",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "deepmerge": "^4.2.2",
-    "eslint": "^7.5.0",
-    "eslint-plugin-vue": "^7.0.0-beta.0",
-    "fibers": "^5.0.0",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.3.1",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "eslint": "^8.20.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "fibers": "^5.0.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "vue-cli-plugin-vuetify": "^2.5.1",
+    "vue-template-compiler": "^2.7.7",
+    "vuetify-loader": "^1.9.1"
   },
   "rules": {
     "semi": 0
